// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`module "adapters/headers" util Headers #constructor() creates an instance of Headers 1`] = `
Map {
  "accept" => "application/vnd.api+json",
  "content-type" => "application/vnd.api+json",
}
`;

exports[`module "adapters/headers" util Headers #set() sets the correct value for the given key 1`] = `
Map {
  "accept" => "application/vnd.api+json",
}
`;
